minor fix for footer on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,14 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 48rem) {
+  .app__footer {
+    text-align: left;
+    font-size: 12px;
+    padding-left: 1.5rem;
+  }
+}
+
 .app__footer a {
   text-decoration: none;
   color: #3f51b5;
